# voxld40

./: .editorconfig  Cargo.toml
src/: app.rs  log_fps.rs  main.rs
src/system/: constant_rotation.rs  interval.rs  mod.rs
src/voxel/: bundle.rs  mod.rs  world_slice.rs
src/voxel/chunk/: data.rs  material.rs  mesh.rs  mod.rs
