[package]
name = "voxld40"
version = "0.1.0"
authors = ["Eidolon"]

[dependencies]
itertools = "0.7.4"
# specs = "0.10.0"
# shred = "0.5.0"
rayon = "0.8.2" # Needed by specs 0.10.0, do not upgrade to 0.9
genmesh = "0.5.0"
hibitset = "0.3.0"
noise = "0.4.1"
fnv = "1.0"
rand = "0.3.18"
amethyst = { git = "https://github.com/amethyst/amethyst/", rev = "2a1a1e6" }

[profile.dev]
opt-level = 1
