[package]
name = "voxld40"
version = "0.1.0"
authors = ["Eidolon"]

[dependencies]
itertools = "0.8.0"
# specs = "0.15.0"
# shred = "0.7.2"
rayon = "1.2"
genmesh = "0.6.2"
hibitset = "0.6.2"
noise = "0.4.1"
fnv = "1"
rand = "0.7.1"

[dependencies.amethyst]
version = "0.12.0"
features = ["vulkan"]

[dependencies.shred]
version = "0.7.2"
features = ["nightly"]

[profile.dev]
opt-level = 1
